syntax = "proto3";

service Simulator {
  rpc Status (EmptyRequest) returns (StatusResponse);
  rpc Start(EmptyRequest) returns(StatusResponse);
  rpc Stop(EmptyRequest)returns(StatusResponse);
}
service Power{
  rpc Status(EmptyRequest)returns(PowerStatusResponse);
  rpc ConnectShore(EmptyRequest)returns(PowerStatusResponse);
  rpc DisconnectShore(EmptyRequest)returns(PowerStatusResponse);
  rpc StartDSgen1(EmptyRequest)returns(RunningResponse);
  rpc StopDSgen1(EmptyRequest)returns(RunningResponse);
}
service FuelSys{
  rpc DStankInfo(EmptyRequest)returns(ContentResponse);
  rpc DSshoreFillValve(ValveRequest) returns(StatusResponse);
  rpc DsStorageOutletValve(ValveRequest) returns(StatusResponse);
  rpc DsServiceIntakeValve(ValveRequest) returns(StatusResponse);

}

message EmptyRequest {}
message ValveRequest {
  string Action=1;
}
message StatusResponse{
  bool status=1;
  string statusMessage=2;
}

message PowerStatusResponse{
  int32 MainBus=1;
  bool ShorePower=2;
  bool DSgen1=3;
}

message RunningResponse{
  bool Running=1;
  string Message=2;
}

message ContentResponse{
  int32 Content=1;
  int32 MaxContent=2;
}